--- a/AI/Config/DefaultGame.ini
+++ b/AI/Config/DefaultGame.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=347C121B4F2CD33E76E4C69E30A4B89F
-ProjectName=InteractiveMusic
+ProjectName=DemoRoom
 
 [StartupActions]
 bAddPacks=True
