--- a/AI/Config/DefaultEngine.ini
+++ b/AI/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [URL]
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/TopLevel.TopLevel
-GameDefaultMap=/Game/Maps/TopLevel.TopLevel
+EditorStartupMap=None
+GameDefaultMap=None
 GlobalDefaultGameMode=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode.FirstPersonGameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
@@ -48,5 +48,3 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
-
-
