--- a/AI/Config/DefaultGame.ini
+++ b/AI/Config/DefaultGame.ini
@@ -42,8 +42,9 @@ bNativizeOnlySelectedBlueprints=False
 [/Script/AkAudio.AkSettings]
 MaxSimultaneousReverbVolumes=4
 WwiseProjectPath=(FilePath="AI_WwiseProject/AI_WwiseProject.wproj")
-WwiseWindowsInstallationPath=(Path="C:/Program Files (x86)/Audiokinetic/Wwise 2016.2.4.6098")
+WwiseWindowsInstallationPath=(Path="C:/Program Files (x86)/Audiokinetic/Wwise 2017.1.1.6340")
 WwiseMacInstallationPath=(FilePath="")
 SuppressWwiseProjectPathWarnings=False
+UseAlternateObstructionOcclusionFeature=False
 
 
