--- a/AI/Config/DefaultEngine.ini
+++ b/AI/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 [URL]
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=None
+EditorStartupMap=/Game/Maps/SoundTransition.SoundTransition
 GameDefaultMap=None
-GlobalDefaultGameMode=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode.FirstPersonGameMode_C
+GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -40,6 +40,7 @@ bSuppressFaceRemapTable=False
 bSupportUVFromHitResults=False
 bDisableActiveActors=False
 bDisableCCD=False
+bEnableEnhancedDeterminism=False
 MaxPhysicsDeltaTime=0.033333
 bSubstepping=False
 bSubsteppingAsync=False
@@ -48,3 +49,6 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
+PhysXTreeRebuildRate=10
+
+
